WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78280
REGRESSION (
r104885
): Articles not displayed in Vienna RSS reader
https://bugs.webkit.org/show_bug.cgi?id=78280
Summary
REGRESSION (r104885): Articles not displayed in Vienna RSS reader
Alexey Proskuryakov
Reported
2012-02-09 13:41:40 PST
I'm seeing it call -[WebFrame loadData:MIMEType:textEncodingName:baseURL:] with a base URL of just "/".
Attachments
proposed fix
(2.64 KB, patch)
2012-02-09 13:46 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-02-09 13:41:55 PST
<
rdar://problem/10762545
>
Alexey Proskuryakov
Comment 2
2012-02-09 13:46:08 PST
Created
attachment 126365
[details]
proposed fix
WebKit Review Bot
Comment 3
2012-02-09 21:43:12 PST
Comment on
attachment 126365
[details]
proposed fix Clearing flags on attachment: 126365 Committed
r107355
: <
http://trac.webkit.org/changeset/107355
>
WebKit Review Bot
Comment 4
2012-02-09 21:43:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug