REGRESSION (r104885): Articles not displayed in Vienna RSS reader https://bugs.webkit.org/show_bug.cgi?id=78280 <rdar://problem/10762545>

Reviewed by Oliver Hunt.

* Misc/WebNSURLExtras.h:
* Misc/WebNSURLExtras.mm: (-[NSURL _webkit_URLFromURLOrPath]):
Added a method to create a URL from a path, similarly to what KURL used to do.

* WebView/WebFrame.mm: (-[WebFrame loadData:MIMEType:textEncodingName:baseURL:]):
Use it in an API where a known regression occurred.


Canonical link: https://commits.webkit.org/95227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107355 268f45cc-cd09-0410-ab3c-d52691b4dbfc